--- a/08-appendix.Rmd
+++ b/08-appendix.Rmd
@@ -1,7 +1,7 @@
 
 # (APPENDIX) Appendix {-} 
 
-# Supporting Information: Co-regulation of paralog genes in the three-dimensional chromatin architecture {#sup-paralog-regulation}
+# Co-regulation of paralog genes: Supporting Information {#sup-paralog-regulation}
 
 <!-- FIGURE S1 ---------------------------------------------------------------->
 ```{r paraVSnonPara, fig.cap='(ref:paraVSnonPara)', out.width='50%', fig.align='center'}
@@ -135,14 +135,15 @@ One-to-one orthologs of human paralogs in mouse (left) and dog (right) genome.
 ```{r PPI, fig.cap='(ref:PPI)', out.width='50%', fig.align='center'}
 knitr::include_graphics("figures/paralog/SI/figS14.png")
 ```
-(ref:PPI) 
-Percent of close paralogs (red) and sampled (grey) gene pairs in the same IMR90 TAD (left bar) or not same TAD (right bar) that have a direct protein protein interaction (PPI) with each other in the HIPPIE database [@Schaefer2012]. 
+(ref:PPI) Percent of close paralogs (red) and sampled (grey) gene pairs in the same IMR90 TAD (left bar) or not same TAD (right bar) that have a direct protein protein interaction (PPI) with each other in the HIPPIE database [@Schaefer2012]. 
 
 <!-- =========================================================================== -->
 
-# Supplementary Data: Evolutionary stability of topologically associating domains is associated with conserved gene regulation {#sup-TAD-evolution}
+# TAD evolution: Supporting Information {#sup-tad-evolution}
+<!-- # Supplementary Data: Evolutionary stability of TADs {#sup-tad-evolution} -->
 
-## Supplementary Tables {#TadEvoSupTab}
+## Supplementary Tables 
+<!-- {#TadEvoSupTab} -->
 
 **Table S1** **Matching tissues and samples with CAGE expression data in human and
 mouse.**
@@ -184,8 +185,8 @@ domain boundary. P-values according to Wilcoxon’s rank-sum test.
 <!-- ----------------------------------------------------------------------- -->
 
 <!-- ======================================================================= -->
-# Supplemental Data: Computational Prediction of Position Effects of Apparently Balanced Human Chromosomal Rearrangements {#sup-position-effect}
-
+<!-- # Supplemental Data: Computational Prediction of Position Effects of Apparently Balanced Human Chromosomal Rearrangements {#sup-position-effect} -->
+# Position Effect: Supplemental Data {#sup-position-effect}
 
 <!-- Supplemental Data include a Supplemental Note detailing clinical case reports, a Supplemental Note detailing the karyotypes of DGAP subjects, 1 figure, and 22 tables and can be found with this article online at http://dx.doi.org/10.1016/j.ajhg.2017.06.011. -->
 
