update and build

--- a/docs/thesis.tex
+++ b/docs/thesis.tex
@@ -258,123 +258,42 @@ conditions.
 Together, these results show that TAD disruption is associated with
 altered gene regulation during evolution and in diseases. TADs are not
 only structural units of genomes but also important functional building
-blocks and represent regulatory environments for genes.~ Therefore, it
+blocks and represent regulatory environments for genes. Therefore, it
 will be increasingly important to take the three-dimensional genome
 structure into account, not only in genomic research but also in
 clinical practice.
 
 \chapter{Introduction}\label{thesis-intro}
 
-\section{Structure of the
-Intorduction}\label{structure-of-the-intorduction}
+\section{Regulation of gene
+expression}\label{regulation-of-gene-expression}
 
-\begin{itemize}
-\tightlist
-\item
-  Cell diversity
-\item
-  Gene Regulation
-\item
-  Enhancers
+Each cell in our body originate from the same fertilized stem cell and
+has therefore virtually the same genome. However, different cell types
+have distinct morphologies and fulfill diverse functions. This diversity
+is archived by expressing only a subset of genes to a specific extent
+for any cell type, developmental state, and environmental condition.
+Gene expression is therefore complex and controlled on many molecular
+levels \citep{Lelli2012}.
 
-  \begin{itemize}
-  \tightlist
-  \item
-    Enhancer--promoter interaction
-  \end{itemize}
-\item
-  Techniques to probe the 3D chromatin architecture
+The genomic DNA sequence itself encodes cis-regulatory modules (CRMs) to
+which transcription factors (TFs) bind by recognizing specific DNA
+sequence motifs. TFs often form complexes with other proteins and DNA.
+However, TF binding and CRM assembly require often specific epigenetic
+states of chromatin. Epigenetic modifications of DNA, such as
+methylation,~ influence the ability of TF to bind DNA at enhancers and
+promoters. The chromatin structure and accessibility itself also
+determines if a gene can be transcribed. While so-called pioneering
+factors can bind closed chromatin that is wrapped around nucleosomes and
+remodel it to make it accessible for other TFs that require open
+chromatin and specific post-translational histone modifications to bind
+enhancers and promoters and regulate target gene expression.
 
-  \begin{itemize}
-  \tightlist
-  \item
-    Imaging based techniques
-  \item
-    3C based methods
-  \item
-    Hi-C
-  \item
-    ChIA-PET
-  \end{itemize}
-\item
-  Chromatin 3D Structure
-
-  \begin{itemize}
-  \tightlist
-  \item
-    Hierarchy of chromatin 3D structure
-
-    \begin{itemize}
-    \tightlist
-    \item
-      Chromosomal Territories
-    \item
-      A/B-Compartments
-    \item
-      TADs
-    \item
-      Chromatin Loops
-
-      \begin{itemize}
-      \tightlist
-      \item
-        Enhancer-Promoter loops
-      \item
-        Gene Loops
-      \item
-        Architectural loops
-      \end{itemize}
-    \end{itemize}
-  \item
-    Architectural Proteins
-  \item
-    Loop extrusion model
-  \end{itemize}
-\item
-  Evolution of chromatin architecture
-\item
-  Disruption of chromatin architecture
-\end{itemize}
-
-\section{Cell diversity and regulation of gene
-expression}\label{cell-diversity-and-regulation-of-gene-expression}
-
-\begin{itemize}
-\tightlist
-\item
-  Cell diversity
-\item
-  Gene Regulation
-\end{itemize}
-
-An important mechanism in eukaryotic gene regulation is the binding of
-transcription factors (TFs) to distal regulatory regions such as
-enhancers which perform looping interactions to the transcription
-machinery at gene promoters. Chromatin interactions can be measured by
-chromatin conformation capture (3C) and its high-throughput variations
-such as 4C, 5C, 6C, ChIA-PET and Hi-C
-\citep{Dekker2013, Lieberman-Aiden2009}.
-
-While genome-wide Hi-C data is still only available for a limited number
-of cell-types and has limited resolution, it is successfully used to
-re-discover important features of the three-dimensional chromatin
-architecture in the nucleus that is organized on different levels. In
-interphase, chromosomes occupy distinct territories in the nucleus
-\citep{Cremer2001} and are further organized in mega-base scale
-A/B-compartments that show specific preferential interaction patterns
-and transcriptional activity \citep{Lieberman-Aiden2009, Rao2014}. On
-smaller scales topologically associating domains (TADs) were identified
-using Hi-C \citep{Dixon2012, Nora2012, Sexton2012}. These are regions of
-several hundred kb, that have more interactions within themselves than
-with other regions and are separated by boundaries that insulate
-interactions between loci in different TADs. Interestingly, TADs are
-largely stable across cell-types and conserved between mammals
-\citep{Dixon2012, Rao2014, Dixon2015, VietriRudan2015}. However, many
-cell-type specific chromatin interaction loops occur within TADs
-\citep{Rao2014, Dixon2015}. This indicates a stable and cell-type
-invariant chromatin architecture on larger scales, such as TADs, and a
-more dynamic and cell-type specific organization of interactions within
-TADs that connect enhancers and TF binding sites to regulated genes.
+Another layer in gene regulation is the three-dimensonal foldig
+structure of chromatin in the nucleus. However, most of the cell-type
+specific gene regulation that accounts for cell differentiation in
+development and morphological diversification in evolution, are driven
+by activation changes of enhancers \citep{Long2016}.
 
 \section{Enhancers}\label{enhancers}
 
@@ -401,18 +320,6 @@ enhancer, but only by combinatorial repression of several weak enhancers
 
 \section{Methods to probe the 3D chromatin
 archtiecture}\label{methods-to-probe-the-3d-chromatin-archtiecture}
-
-\begin{itemize}
-\tightlist
-\item
-  Imaging based techniques
-\item
-  3C based methods
-\item
-  Hi-C
-\item
-  ChIA-PET
-\end{itemize}
 
 \subsection{Microscopy-based techniques to visuallize the genome in
 3D}\label{microscopy-based-techniques-to-visuallize-the-genome-in-3d}
@@ -524,34 +431,6 @@ later up to 1kb resolution \citep{Rao2014}.
 
 \section{Hierarchy of chromatin 3D
 structure}\label{hierarchy-of-chromatin-3d-structure}
-
-\begin{itemize}
-\tightlist
-\item
-  Chromosomal Territories
-\item
-  A/B-Compartments
-\item
-  TADs
-\item
-  Chromatin Loops
-
-  \begin{itemize}
-  \tightlist
-  \item
-    Enhancer-Promoter loops
-  \item
-    Gene Loops
-  \item
-    Architectural loops
-  \end{itemize}
-\item
-  Architectural Proteins
-\item
-  (Loop extrusion model)
-\item
-  Nucleosomes / 10nm / 30nm fibers
-\end{itemize}
 
 \begin{figure}
 
@@ -665,37 +544,7 @@ be mostly constrained within TADs \citep{Shen2012}
 Alltogether, there is accumulating evidence that TADs are fundamental
 units of chromosome organization \citep{Dixon2016}
 
-\begin{itemize}
-\tightlist
-\item
-  {[}X{]} Definition, number, and size
-\item
-  {[}X{]} Algorithms to identify TADs
-\item
-  Functional features
-\item
-  {[}X{]} CTCF binding at boundaries
-\item
-  {[}X{]} housekeeping genes at boundaries
-\item
-  enhancer-gene associations within TADs
-\end{itemize}
-
 \subsection{Chromatin loops}\label{chromatin-loops}
-
-\begin{itemize}
-\tightlist
-\item
-  Loop domains
-\item
-  Architectural proteins
-\item
-  Enhancer-promoter loops
-\item
-  Polycomp mediated loops
-\item
-  Gene loops
-\end{itemize}
 
 In summary, these findings suggest a hierarchical organization of
 chromosome architecture. First, dynamic nucleosome contacts from
@@ -1806,7 +1655,7 @@ My contributions to this publication is indicated in Table
 \ref{tab:contribution}. The source code of the complete analysis is
 available at GitHub: \url{https://github.com/Juppen/TAD-Evolution}.
 Supplementary figures and links to supplementary tables are shown in
-Appendix \ref{sup-TAD-evolution}.
+Appendix \ref{sup-tad-evolution}.
 \end{quote}
 
 \subsection*{Abstract}\label{abstract-2}
@@ -2653,24 +2502,24 @@ association with human disease is one of the oldest and most studied
 topics in clinical genetics. As early as 1959, cytogenetic studies in
 humans linked specific genetic or genomic disorders and intellectual
 disability syndromes to changes in chromosomal ploidy, translocations,
-and DNA duplications and
-deletions.\citep{Iafrate2004, Sebat2004, Conrad2006, Hinds2006, Conrad2010}
+and DNA duplications and deletions
+\citep{Lejeune1959, Ford1959, Jacobs1959, Stankiewicz2002, Iafrate2004}.
+
 The discovery of copy-number variants (CNVs) by microarray and
 sequencing technologies expanded the catalogue of genetic variation
-between individuals to test such associations at higher
-resolution.\citep[
-HapMap2010]{Iafrate2004, Sebat2004, Conrad2006, McCarroll2006, Hinds2006, Conrad2010, Korbel2007, Alkan2009, Chen2009, McKernan2009, Sudmant2010, International}
+between individuals to test such associations at higher resolution
+\citep{Iafrate2004, Sebat2004, Hinds2006, Conrad2006, Conrad2010, Korbel2007, Stankiewicz2010, Altshuler2010, Durbin2010, Carvalho2016}.
 Over the years, analysis of disease-related structural rearrangements
 has illuminated genes that are mutated in various human developmental
-disorders.\citep{Zhang2009, Theisen2010, Nambiar2011} Such chromosome
-aberrations can directly disrupt gene sequences, affect gene dosage,
-generate gene fusions, unmask recessive alleles, reveal imprinted genes,
-or result in alterations of gene expression through additional
-mechanisms such as position effects.\citep{Zhang2009} The latter is
-particularly important for the study of apparently balanced chromosome
-abnormalities (BCAs), such as translocations and inversions, often found
-outside of the hypothesized disease-causing genes (reviewed in
-\citep{Kleinjan2005}).
+disorders \citep{Zhang2009, Theisen2010, Nambiar2011, Higgins2008}. Such
+chromosome aberrations can directly disrupt gene sequences, affect gene
+dosage, generate gene fusions, unmask recessive alleles, reveal
+imprinted genes, or result in alterations of gene expression through
+additional mechanisms such as position effects \citep{Zhang2009}. The
+latter is particularly important for the study of apparently balanced
+chromosome abnormalities (BCAs), such as translocations and inversions,
+often found outside of the hypothesized disease-causing genes (reviewed
+in \citep{Kleinjan2005}).
 
 Position effects were first identified in \emph{Drosophila
 melanogaster}, where chromosomal inversions placing \emph{white+} near
@@ -2708,13 +2557,13 @@ regulatory issues such as alteration of long-range transcriptional
 control and position effects can now be predicted in terms of chromosome
 organization. The high resolution view of chromosome architecture in
 diverse human cell lines and
-tissues\citep{Lieberman-Aiden2009, Fullwood2009, Dixon2012, Sanyal2012, Phillips-Cremins2013, Rao2014, Mifsud2015}
+tissues\citep{Lieberman-Aiden2009, Fullwood2009, Dixon2012, Sanyal2012, Phillips-Cremins2013, Rao2014, Mifsud2015, Dixon2015}
 has allowed molecular assessment of the disruption of regulatory
 chromatin contacts by pathogenic structural variants and single
 nucleotide changes; examples include the study of limb
 malformations,\citep{Lupianez2015} leukemia,\citep{Groschel2014} and
 obesity,\citep{Claussnitzer2015} among
-others.\citep{Visser2012, Roussos2014, Giorgio2015, Oldridge2015, Ibn-Salem2014}
+others.\citep{Visser2012, Roussos2014, Giorgio2015, Oldridge2015, Ibn-Salem2014, Ordulu2016}
 These examples underscore the importance of chromatin interactions in
 quantitative and temporal control of gene expression, which can greatly
 enhance our power to predict pathologic consequences.
@@ -2722,16 +2571,16 @@ enhance our power to predict pathologic consequences.
 To test the feasibility of prediction and clinical interpretation of
 position effects of non-coding chromosome rearrangements, we analyzed 17
 subjects from the Developmental Gene Anatomy Project
-(DGAP)\citep{Higgins2008, Ligon2005, Kim2008, Lu2007} with \emph{de
-novo} non-coding BCAs classified as variants of uncertain significance
-(VUS). Using publicly available chromatin contact information, annotated
-and predicted regulatory elements, and correlation between phenotypes
-observed in DGAP subjects and those associated with neighboring genes,
-we reliably predicted candidate genes exhibiting mis-regulated
-expression in DGAP-derived lymphoblastoid cell lines (LCLs). These
-results suggest that many VUS are likely to be further interpretable via
-long-range effects, and warrant their routine assessment and integration
-in clinical diagnosis.
+(DGAP)\citep{Higgins2008, Ligon2005, Kim2008, Lu2007, Redin2017} with
+\emph{de novo} non-coding BCAs classified as variants of uncertain
+significance (VUS). Using publicly available chromatin contact
+information, annotated and predicted regulatory elements, and
+correlation between phenotypes observed in DGAP subjects and those
+associated with neighboring genes, we reliably predicted candidate genes
+exhibiting mis-regulated expression in DGAP-derived lymphoblastoid cell
+lines (LCLs). These results suggest that many VUS are likely to be
+further interpretable via long-range effects, and warrant their routine
+assessment and integration in clinical diagnosis.
 
 \section{Materials and Methods}\label{materials-and-methods}
 
@@ -2741,8 +2590,8 @@ abnormalities}\label{selection-of-subjects-with-apparently-balanced-chromosome-a
 BCA breakpoints and clinical data were obtained from DGAP cases for
 which whole-genome sequencing was performed using a previously described
 large-insert jumping library
-approach.\citep{Higgins2008, Ligon2005, Kim2008, Lu2007, Redin2017} A
-total of 151 cases were filtered to select only subjects whose
+approach.\citep{Higgins2008, Ligon2005, Kim2008, Lu2007, Redin2017, Talkowski2011}
+A total of 151 cases were filtered to select only subjects whose
 translocation or inversion breakpoints fall within intergenic regions
 (GRCh37) and did not overlap known long intergenic non-coding RNAs
 (lincRNAs) or pseudogenes, as these elements have been shown to exert
@@ -2949,7 +2798,8 @@ breakpoints}\label{genomic-characterization-of-non-coding-breakpoints}
 
 To study the structural and evolutionary context of BCAs and their
 impact on nuclear architecture and gene expression, we used data
-generated by DGAP,\citep{Higgins2008, Ligon2005, Kim2008, Lu2007} the
+generated by
+DGAP,\citep{Higgins2008, Ligon2005, Kim2008, Lu2007, Redin2017} the
 largest collection of sequenced balanced chromosome rearrangements from
 individuals with abnormal developmental and cognitive phenotypes, many
 of which have yet to be investigated in detail. Each studied DGAP BCA
@@ -3176,13 +3026,14 @@ normal sex-matched controls
 (Figure~\ref{fig:position-effect-2}).Expression assessment for
 second-tier candidates \emph{PAK3}, \emph{MID2} and \emph{POU3F4} in
 DGAP176 LCLs did not deviate substantially from their control expression
-values (Figure S1); further searches into the Genotype-Tissue Expression
-(GTEx) project\citep{Lonsdale2013} reveal that \emph{PAK3}, \emph{MID2}
-and \emph{POU3F4} have low expression in LCLs, which would have made
-assessing changes in expression of these genes technically difficult.
-This points to the importance of the availability of tissues and cell
-lines relevant to the studied phenotypes, or the capacity to generate
-animal models that reproduce the observed BCAs for further analysis.
+values (Figure~\ref{fig:position-effect-S1}); further searches into the
+Genotype-Tissue Expression (GTEx) project\citep{Lonsdale2013} reveal
+that \emph{PAK3}, \emph{MID2} and \emph{POU3F4} have low expression in
+LCLs, which would have made assessing changes in expression of these
+genes technically difficult. This points to the importance of the
+availability of tissues and cell lines relevant to the studied
+phenotypes, or the capacity to generate animal models that reproduce the
+observed BCAs for further analysis.
 
 \begin{figure}
 
@@ -3301,7 +3152,7 @@ important for the regulation of gene expression,\citep{DeWit2012} with
 primary roles in embryonic development and disease.\citep{Bonev2016}
 Several studies have analyzed the impact of structural variants in
 disruption of the regulatory chromatin environment leading to
-disease;\citep{Lupianez2015, Groschel2014, Visser2012, Roussos2014, Ibn-Salem2014}
+disease;\citep{Lupianez2015, Groschel2014, Visser2012, Roussos2014, Giorgio2015, Ibn-Salem2014}
 these studies have set the precedent for integrative analyses of
 disrupted chromatin conformation to expedite functional annotations of
 non-coding chromosome rearrangements.
@@ -3686,8 +3537,8 @@ developments of diagnosis and treatments.
 \appendix
 
 
-\chapter{Supporting Information: Co-regulation of paralog genes in the
-three-dimensional chromatin architecture}\label{sup-paralog-regulation}
+\chapter{Co-regulation of paralog genes: Supporting
+Information}\label{sup-paralog-regulation}
 
 \begin{figure}
 
@@ -4075,12 +3926,9 @@ database \citep{Schaefer2012}.}\label{fig:PPI}
 
 
 
-\chapter{Supplementary Data: Evolutionary stability of topologically
-associating domains is associated with conserved gene
-regulation}\label{sup-TAD-evolution}
+\chapter{TAD evolution: Supporting Information}\label{sup-tad-evolution}
 
-\hypertarget{TadEvoSupTab}{\section{Supplementary
-Tables}\label{TadEvoSupTab}}
+\section{Supplementary Tables}\label{supplementary-tables}
 
 \textbf{Table S1} \textbf{Matching tissues and samples with CAGE
 expression data in human and mouse.}
@@ -4140,9 +3988,7 @@ domain boundary. P-values according to Wilcoxon's rank-sum test.}\label{fig:TadE
 
 
 
-\chapter{Supplemental Data: Computational Prediction of Position Effects
-of Apparently Balanced Human Chromosomal
-Rearrangements}\label{sup-position-effect}
+\chapter{Position Effect: Supplemental Data}\label{sup-position-effect}
 
 \section{Supplemental Note: Case
 Reports}\label{supplemental-note-case-reports}
