--- a/docs/thesis.tex
+++ b/docs/thesis.tex
@@ -81,24 +81,24 @@
 % **************************************************
 \newcommand{\thesisTitle}{Genome folding in evolution and disease}
 \newcommand{\thesisName}{Jonas Ibn-Salem}
-\newcommand{\thesisSubject}{Documentation}
+\newcommand{\thesisSubject}{PhD Thesis}
 % \newcommand{\thesisDate}{January, 2018}
 \newcommand{\thesisDate}{\today}
 \newcommand{\thesisVersion}{0.0.1}
 
 \newcommand{\thesisFirstReviewer}{Prof. Dr. Miguel Andrade-Navarro}
-\newcommand{\thesisFirstReviewerUniversity}{\protect{Johannes Gutenberg-Universität Mainz}}
-\newcommand{\thesisFirstReviewerDepartment}{Fachbereich Biologie}
+\newcommand{\thesisFirstReviewerUniversity}{\protect{Johannes Gutenberg University Mainz}}
+\newcommand{\thesisFirstReviewerDepartment}{Faculty of Biology}
 
-\newcommand{\thesisSecondReviewer}{Prof. Dr. Thomas Hankeln}
-\newcommand{\thesisSecondReviewerUniversity}{\protect{Johannes Gutenberg-Universität Mainz}}
-\newcommand{\thesisSecondReviewerDepartment}{Fachbereich Biologie}
+\newcommand{\thesisSecondReviewer}{Jun.-Prof. Dr. Susanne Gerber}
+\newcommand{\thesisSecondReviewerUniversity}{\protect{Johannes Gutenberg University Mainz}}
+\newcommand{\thesisSecondReviewerDepartment}{Faculty of Biology and Center for Computational Sciences in Mainz}
 
 \newcommand{\thesisFirstSupervisor}{Miguel Andrade}
 \newcommand{\thesisSecondSupervisor}{}
 
-\newcommand{\thesisUniversity}{\protect{Johannes Gutenberg-Universität Mainz}}
-\newcommand{\thesisUniversityDepartment}{Fachbereich Biologie}
+\newcommand{\thesisUniversity}{\protect{Johannes Gutenberg University Mainz}}
+\newcommand{\thesisUniversityDepartment}{Faculty of Biology}
 \newcommand{\thesisUniversityInstitute}{Institute of Organismic and Molecular Evolution}
 \newcommand{\thesisUniversityGroup}{Computational Biology and Data Mining Group}
 \newcommand{\thesisUniversityCity}{Mainz}
@@ -160,7 +160,7 @@
 
 \title{Genome folding in evolution and disease}
 \author{Jonas Ibn-Salem}
-\date{2018-01-29}
+\date{2018-01-30}
 
 \usepackage{amsthm}
 \newtheorem{theorem}{Theorem}[chapter]
